8238574: Shenandoah: Assertion failure due to missing null check

Reviewed-by: shade